--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my--cli",
+  "name": "@krishna_g_k/my--cli",
   "version": "1.0.0",
   "description": "Quickly organize,tree view A Directory",
   "main": "index.js",
